# MapFoldingAtHome

./: Cargo.toml
benches/: folding_benchmarks.rs  folding_benchmarks_extended.rs
src/: cpu.rs  gpu.rs  lib.rs  main.rs  shader.wgsl
