[package]
name = "folds"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
num_cpus = "1.16"
wgpu = "23.0.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
futures-intrusive = "0.5.0"
tokio = { version = "1.41.1", features = ["full"] }
env_logger = "0.11.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "folding_benchmarks"
harness = false
